# data-dedup-pilot

./: .gitignore  .gitignore.txt  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run_review_export.py
.github/workflows/: ci.yml
Data/: Contacts_LLM_Test.xlsx  Contacts_Raw.xlsx  Duplicate_Contact_Scrub.xlsx  WhatsGoingOn.xlsx  dedup_llm_decisions.xlsx  dedup_results_with_ml.xlsx  dedup_with_suggestions.xlsx  duplicate_contacts_small.xlsx
Scripts/: Final.py  active_review_full.py  fix_llm_suggestions.py  retrain_from_review.py  run_dedupe.py  run_review_export.py  test_llm.py
models/: label_encoder.joblib
notebooks/: 01_profile.ipynb  02_profile.ipynb  03_profile.ipynb  04_profile.ipynb  05_profile.ipynb  06_profile.ipynb  07_profile.ipynb
notebooks/output/: dedup_results.xlsx  deduped_contacts.xlsx
output/: Contacts_LLM_Test1.xlsx
review/: review_needed.xlsx
src/: active_learning_pipeline.py  dedupe_pipeline.py  llm_validation.py  run_dedupe.py
src/contact_dedupe/: __init__.py  cli.py
src/contact_dedupe/pipeline/: active_learning_pipeline.py  dedupe_pipeline_final.py  llm_validation.py
src/src/: active_learning_pipeline.py
tests/: test_smoke.py
